Fix overflowing text bug on home page

--- a/src/main/resources/static/css/home-styles.css
+++ b/src/main/resources/static/css/home-styles.css
@@ -46,6 +46,7 @@
 
 .upload-form__file-area__text {
     max-width: 100%;
+    overflow: hidden;
     text-overflow: ellipsis;
     text-wrap: nowrap;
 }
